--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -27,8 +27,8 @@ h1 {
 #tickers {
     overflow-y: auto;
     border: 1px solid #254a1b;
-    max-height: 200px !important;
-    max-width: 100px !important;
+    height: 200px !important;
+    width: 100px !important;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -48,18 +48,24 @@ h1 {
     font-weight: bold;
 }
 
-#selected-tickers {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+#selected-tickers-list div.selected {
+    background-color: #60e102;
+    border-color: #007bff;
+    font-weight: bold;
 }
 
-#selected-tickers div {
+#selected-tickers-list div {
+    display: flex;
+    cursor: pointer;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#selected-tickers-list {
     overflow-y: auto;
     border: 1px solid #254a1b;
-    max-height: 200px !important;
-    max-width: 100px;
+    height: 200px !important;
+    width: 100px !important;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -68,5 +74,22 @@ h1 {
 
 #result-container {
     display: flex;
+    justify-content: center;
+    align-items: flex-start;
     gap: 20px;
+    margin: 20px 0;
+}
+
+#buttons-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    gap: 5px;
+}
+
+#buttons-container button{
+    cursor: pointer;
+    justify-content: space-between;
+    align-items: center;
 }
